fix overflow

--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,7 @@ body {
     padding: 0;
     font-family: sans-serif, 'microsoft yahei';
     height: 100%;
+    overflow: hidden;
 }
 
 .btn {
