--- a/src/routes/list/index.css
+++ b/src/routes/list/index.css
@@ -7,11 +7,6 @@
 
 body {
     font-family: 'Century Gothic', sans-serif;
-    overflow-y: auto;
-}
-
-.container-fluid {
-    max-width: 1600px;
 }
 
 .container_wapper h1 {
